Drop Guava in favor of plain Java API (#461)
Co-authored-by: Diego Molina <diemol@users.noreply.github.com>